2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/overlay_added.png,
	  MonoDevelop.VersionControl/overlay_conflicted.png,
	  MonoDevelop.VersionControl/overlay_controled.png,
	  MonoDevelop.VersionControl/overlay_locked.png,
	  MonoDevelop.VersionControl/overlay_modified.png,
	  MonoDevelop.VersionControl/overlay_removed.png: Use tango file icons.
	  Removed obsolete icons.

2007-10-24  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Diffs.cs,
	  MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Logs.cs,
	  MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Statuses.cs:
	  Destroy the view when disposing.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  Updated comment.
	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.Dialogs/EditRepositoryDialog.cs,
	  MonoDevelop.VersionControl/MonoDevelop.VersionControl/Repository.cs,
	  MonoDevelop.VersionControl/MonoDevelop.VersionControl/UrlBasedRepositoryEditor.cs:
	  Set a default repo name if none is specified. Fixes bug #335114.

2007-10-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/Makefile.am,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.mdp:
	  Added reference to System.
	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibApr.cs,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  libsvn_client may be linked to libapr-0 or libapr-1, and we need to bind
	  the LibApr class the the same library. Added code that detects the
	  required libapr version and loads it. Fixes bug #325391.

2007-10-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Diff/Diff.mdp, DiffWidget/DiffWidget.mdp,
	  MonoDevelop.VersionControl.Subversion/gtk-gui/gui.stetic,